# OopCpp

./: CMakeLists.txt  Developer.cpp  Developer.h  Employee.cpp  Employee.h  Manager.cpp  Manager.h  Project.cpp  Project.h  main.cpp
include/: Developer.h  Employee.h  Manager.h  Project.h
src/: Developer.cpp  Employee.cpp  Manager.cpp  Project.cpp  main.cpp
